tests/ui/docbox/unknown_field.stderr
error: Unknown field: `invalid`
 --> $DIR/unknown_field.rs:3:10
  |
3 | #[docbox(invalid="field")]
  |          ^^^^^^^^^^^^^^^
