tests/ui/docbox/unknown_field.rs
use doc_item::docbox;

#[docbox(invalid="field")]
fn unknown_field() {}

fn main() {}
